initial commit for jdk8