@@ -5,15 +5,11 @@
 package io.modelcontextprotocol.server;
 
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.function.BiFunction;
+import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -31,6 +27,7 @@ import io.modelcontextprotocol.spec.McpServerTransportProvider;
 import io.modelcontextprotocol.util.DeafaultMcpUriTemplateManagerFactory;
 import io.modelcontextprotocol.util.McpUriTemplateManagerFactory;
 import io.modelcontextprotocol.util.Utils;
+import lombok.var;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import reactor.core.publisher.Flux;
@@ -92,21 +89,21 @@ public class McpAsyncServer {
 
 	private final String instructions;
 
-	private final CopyOnWriteArrayList<McpServerFeatures.AsyncToolSpecification> tools = new CopyOnWriteArrayList<>();
+	private final CopyOnWriteArrayList<McpServerFeatures.AsyncToolSpecification> tools = new CopyOnWriteArrayList<McpServerFeatures.AsyncToolSpecification>();
 
 	private final CopyOnWriteArrayList<McpSchema.ResourceTemplate> resourceTemplates = new CopyOnWriteArrayList<>();
 
-	private final ConcurrentHashMap<String, McpServerFeatures.AsyncResourceSpecification> resources = new ConcurrentHashMap<>();
+	private final ConcurrentHashMap<String, McpServerFeatures.AsyncResourceSpecification> resources = new ConcurrentHashMap<String, McpServerFeatures.AsyncResourceSpecification>();
 
-	private final ConcurrentHashMap<String, McpServerFeatures.AsyncPromptSpecification> prompts = new ConcurrentHashMap<>();
+	private final ConcurrentHashMap<String, McpServerFeatures.AsyncPromptSpecification> prompts = new ConcurrentHashMap<String, McpServerFeatures.AsyncPromptSpecification>();
 
 	// FIXME: this field is deprecated and should be remvoed together with the
 	// broadcasting loggingNotification.
 	private LoggingLevel minLoggingLevel = LoggingLevel.DEBUG;
 
-	private final ConcurrentHashMap<McpSchema.CompleteReference, McpServerFeatures.AsyncCompletionSpecification> completions = new ConcurrentHashMap<>();
+	private final ConcurrentHashMap<McpSchema.CompleteReference, McpServerFeatures.AsyncCompletionSpecification> completions = new ConcurrentHashMap<McpSchema.CompleteReference, McpServerFeatures.AsyncCompletionSpecification>();
 
-	private List<String> protocolVersions = List.of(McpSchema.LATEST_PROTOCOL_VERSION);
+	private List<String> protocolVersions = Collections.singletonList(McpSchema.LATEST_PROTOCOL_VERSION);
 
 	private McpUriTemplateManagerFactory uriTemplateManagerFactory = new DeafaultMcpUriTemplateManagerFactory();
 
@@ -122,14 +119,14 @@ public class McpAsyncServer {
 			McpUriTemplateManagerFactory uriTemplateManagerFactory) {
 		this.mcpTransportProvider = mcpTransportProvider;
 		this.objectMapper = objectMapper;
-		this.serverInfo = features.serverInfo();
-		this.serverCapabilities = features.serverCapabilities();
-		this.instructions = features.instructions();
-		this.tools.addAll(features.tools());
-		this.resources.putAll(features.resources());
-		this.resourceTemplates.addAll(features.resourceTemplates());
-		this.prompts.putAll(features.prompts());
-		this.completions.putAll(features.completions());
+		this.serverInfo = features.getServerInfo();
+		this.serverCapabilities = features.getServerCapabilities();
+		this.instructions = features.getInstructions();
+		this.tools.addAll(features.getTools());
+		this.resources.putAll(features.getResources());
+		this.resourceTemplates.addAll(features.getResourceTemplates());
+		this.prompts.putAll(features.getPrompts());
+		this.completions.putAll(features.getCompletions());
 		this.uriTemplateManagerFactory = uriTemplateManagerFactory;
 
 		Map<String, McpServerSession.RequestHandler<?>> requestHandlers = new HashMap<>();
@@ -137,34 +134,34 @@ public class McpAsyncServer {
 		// Initialize request handlers for standard MCP methods
 
 		// Ping MUST respond with an empty data, but not NULL response.
-		requestHandlers.put(McpSchema.METHOD_PING, (exchange, params) -> Mono.just(Map.of()));
+		requestHandlers.put(McpSchema.METHOD_PING, (exchange, params) -> Mono.just(Collections.emptyMap()));
 
 		// Add tools API handlers if the tool capability is enabled
-		if (this.serverCapabilities.tools() != null) {
+		if (this.serverCapabilities.getTools() != null) {
 			requestHandlers.put(McpSchema.METHOD_TOOLS_LIST, toolsListRequestHandler());
 			requestHandlers.put(McpSchema.METHOD_TOOLS_CALL, toolsCallRequestHandler());
 		}
 
 		// Add resources API handlers if provided
-		if (this.serverCapabilities.resources() != null) {
+		if (this.serverCapabilities.getResources() != null) {
 			requestHandlers.put(McpSchema.METHOD_RESOURCES_LIST, resourcesListRequestHandler());
 			requestHandlers.put(McpSchema.METHOD_RESOURCES_READ, resourcesReadRequestHandler());
 			requestHandlers.put(McpSchema.METHOD_RESOURCES_TEMPLATES_LIST, resourceTemplateListRequestHandler());
 		}
 
 		// Add prompts API handlers if provider exists
-		if (this.serverCapabilities.prompts() != null) {
+		if (this.serverCapabilities.getPrompts() != null) {
 			requestHandlers.put(McpSchema.METHOD_PROMPT_LIST, promptsListRequestHandler());
 			requestHandlers.put(McpSchema.METHOD_PROMPT_GET, promptsGetRequestHandler());
 		}
 
 		// Add logging API handlers if the logging capability is enabled
-		if (this.serverCapabilities.logging() != null) {
+		if (this.serverCapabilities.getLogging() != null) {
 			requestHandlers.put(McpSchema.METHOD_LOGGING_SET_LEVEL, setLoggerRequestHandler());
 		}
 
 		// Add completion API handlers if the completion capability is enabled
-		if (this.serverCapabilities.completions() != null) {
+		if (this.serverCapabilities.getCompletions() != null) {
 			requestHandlers.put(McpSchema.METHOD_COMPLETION_COMPLETE, completionCompleteRequestHandler());
 		}
 
@@ -173,10 +170,10 @@ public class McpAsyncServer {
 		notificationHandlers.put(McpSchema.METHOD_NOTIFICATION_INITIALIZED, (exchange, params) -> Mono.empty());
 
 		List<BiFunction<McpAsyncServerExchange, List<McpSchema.Root>, Mono<Void>>> rootsChangeConsumers = features
-			.rootsChangeConsumers();
+			.getRootsChangeConsumers();
 
 		if (Utils.isEmpty(rootsChangeConsumers)) {
-			rootsChangeConsumers = List.of((exchange, roots) -> Mono.fromRunnable(() -> logger
+			rootsChangeConsumers = Collections.singletonList((exchange, roots) -> Mono.fromRunnable(() -> logger
 				.warn("Roots list changed notification, but no consumers provided. Roots list changed: {}", roots)));
 		}
 
@@ -195,24 +192,24 @@ public class McpAsyncServer {
 			McpSchema.InitializeRequest initializeRequest) {
 		return Mono.defer(() -> {
 			logger.info("Client initialize request - Protocol: {}, Capabilities: {}, Info: {}",
-					initializeRequest.protocolVersion(), initializeRequest.capabilities(),
-					initializeRequest.clientInfo());
+					initializeRequest.getProtocolVersion(), initializeRequest.getCapabilities(),
+					initializeRequest.getClientInfo());
 
 			// The server MUST respond with the highest protocol version it supports
 			// if
 			// it does not support the requested (e.g. Client) version.
 			String serverProtocolVersion = this.protocolVersions.get(this.protocolVersions.size() - 1);
 
-			if (this.protocolVersions.contains(initializeRequest.protocolVersion())) {
+			if (this.protocolVersions.contains(initializeRequest.getProtocolVersion())) {
 				// If the server supports the requested protocol version, it MUST
 				// respond
 				// with the same version.
-				serverProtocolVersion = initializeRequest.protocolVersion();
+				serverProtocolVersion = initializeRequest.getProtocolVersion();
 			}
 			else {
 				logger.warn(
 						"Client requested unsupported protocol version: {}, so the server will suggest the {} version instead",
-						initializeRequest.protocolVersion(), serverProtocolVersion);
+						initializeRequest.getProtocolVersion(), serverProtocolVersion);
 			}
 
 			return Mono.just(new McpSchema.InitializeResult(serverProtocolVersion, this.serverCapabilities,
@@ -255,7 +252,7 @@ public class McpAsyncServer {
 			List<BiFunction<McpAsyncServerExchange, List<McpSchema.Root>, Mono<Void>>> rootsChangeConsumers) {
 		return (exchange, params) -> exchange.listRoots()
 			.flatMap(listRootsResult -> Flux.fromIterable(rootsChangeConsumers)
-				.flatMap(consumer -> consumer.apply(exchange, listRootsResult.roots()))
+				.flatMap(consumer -> consumer.apply(exchange, listRootsResult.getRoots()))
 				.onErrorResume(error -> {
 					logger.error("Error handling roots list change notification", error);
 					return Mono.empty();
@@ -276,27 +273,27 @@ public class McpAsyncServer {
 		if (toolSpecification == null) {
 			return Mono.error(new McpError("Tool specification must not be null"));
 		}
-		if (toolSpecification.tool() == null) {
+		if (toolSpecification.getTool() == null) {
 			return Mono.error(new McpError("Tool must not be null"));
 		}
-		if (toolSpecification.call() == null) {
+		if (toolSpecification.getCall() == null) {
 			return Mono.error(new McpError("Tool call handler must not be null"));
 		}
-		if (this.serverCapabilities.tools() == null) {
+		if (this.serverCapabilities.getTools() == null) {
 			return Mono.error(new McpError("Server must be configured with tool capabilities"));
 		}
 
 		return Mono.defer(() -> {
 			// Check for duplicate tool names
-			if (this.tools.stream().anyMatch(th -> th.tool().name().equals(toolSpecification.tool().name()))) {
+			if (this.tools.stream().anyMatch(th -> th.getTool().getName().equals(toolSpecification.getTool().getName()))) {
 				return Mono
-					.error(new McpError("Tool with name '" + toolSpecification.tool().name() + "' already exists"));
+					.error(new McpError("Tool with name '" + toolSpecification.getTool().getName() + "' already exists"));
 			}
 
 			this.tools.add(toolSpecification);
-			logger.debug("Added tool handler: {}", toolSpecification.tool().name());
+			logger.debug("Added tool handler: {}", toolSpecification.getTool().getName());
 
-			if (this.serverCapabilities.tools().listChanged()) {
+			if (this.serverCapabilities.getTools().getListChanged()) {
 				return notifyToolsListChanged();
 			}
 			return Mono.empty();
@@ -312,16 +309,16 @@ public class McpAsyncServer {
 		if (toolName == null) {
 			return Mono.error(new McpError("Tool name must not be null"));
 		}
-		if (this.serverCapabilities.tools() == null) {
+		if (this.serverCapabilities.getTools() == null) {
 			return Mono.error(new McpError("Server must be configured with tool capabilities"));
 		}
 
 		return Mono.defer(() -> {
 			boolean removed = this.tools
-				.removeIf(toolSpecification -> toolSpecification.tool().name().equals(toolName));
+				.removeIf(toolSpecification -> toolSpecification.getTool().getName().equals(toolName));
 			if (removed) {
 				logger.debug("Removed tool handler: {}", toolName);
-				if (this.serverCapabilities.tools().listChanged()) {
+				if (this.serverCapabilities.getTools().getListChanged()) {
 					return notifyToolsListChanged();
 				}
 				return Mono.empty();
@@ -340,7 +337,7 @@ public class McpAsyncServer {
 
 	private McpServerSession.RequestHandler<McpSchema.ListToolsResult> toolsListRequestHandler() {
 		return (exchange, params) -> {
-			List<Tool> tools = this.tools.stream().map(McpServerFeatures.AsyncToolSpecification::tool).toList();
+			List<Tool> tools = this.tools.stream().map(McpServerFeatures.AsyncToolSpecification::getTool).collect(Collectors.toList());
 
 			return Mono.just(new McpSchema.ListToolsResult(tools, null));
 		};
@@ -353,15 +350,15 @@ public class McpAsyncServer {
 					});
 
 			Optional<McpServerFeatures.AsyncToolSpecification> toolSpecification = this.tools.stream()
-				.filter(tr -> callToolRequest.name().equals(tr.tool().name()))
+				.filter(tr -> callToolRequest.getName().equals(tr.getTool().getName()))
 				.findAny();
 
-			if (toolSpecification.isEmpty()) {
-				return Mono.error(new McpError("Tool not found: " + callToolRequest.name()));
+			if (!toolSpecification.isPresent()) {
+				return Mono.error(new McpError("Tool not found: " + callToolRequest.getName()));
 			}
 
-			return toolSpecification.map(tool -> tool.call().apply(exchange, callToolRequest.arguments()))
-				.orElse(Mono.error(new McpError("Tool not found: " + callToolRequest.name())));
+			return toolSpecification.map(tool -> tool.getCall().apply(exchange, callToolRequest.getArguments()))
+				.orElse(Mono.error(new McpError("Tool not found: " + callToolRequest.getName())));
 		};
 	}
 
@@ -375,21 +372,21 @@ public class McpAsyncServer {
 	 * @return Mono that completes when clients have been notified of the change
 	 */
 	public Mono<Void> addResource(McpServerFeatures.AsyncResourceSpecification resourceSpecification) {
-		if (resourceSpecification == null || resourceSpecification.resource() == null) {
+		if (resourceSpecification == null || resourceSpecification.getResource() == null) {
 			return Mono.error(new McpError("Resource must not be null"));
 		}
 
-		if (this.serverCapabilities.resources() == null) {
+		if (this.serverCapabilities.getResources() == null) {
 			return Mono.error(new McpError("Server must be configured with resource capabilities"));
 		}
 
 		return Mono.defer(() -> {
-			if (this.resources.putIfAbsent(resourceSpecification.resource().uri(), resourceSpecification) != null) {
+			if (this.resources.putIfAbsent(resourceSpecification.getResource().getUri(), resourceSpecification) != null) {
 				return Mono.error(new McpError(
-						"Resource with URI '" + resourceSpecification.resource().uri() + "' already exists"));
+						"Resource with URI '" + resourceSpecification.getResource().getUri() + "' already exists"));
 			}
-			logger.debug("Added resource handler: {}", resourceSpecification.resource().uri());
-			if (this.serverCapabilities.resources().listChanged()) {
+			logger.debug("Added resource handler: {}", resourceSpecification.getResource().getUri());
+			if (this.serverCapabilities.getResources().getListChanged()) {
 				return notifyResourcesListChanged();
 			}
 			return Mono.empty();
@@ -405,7 +402,7 @@ public class McpAsyncServer {
 		if (resourceUri == null) {
 			return Mono.error(new McpError("Resource URI must not be null"));
 		}
-		if (this.serverCapabilities.resources() == null) {
+		if (this.serverCapabilities.getResources() == null) {
 			return Mono.error(new McpError("Server must be configured with resource capabilities"));
 		}
 
@@ -413,7 +410,7 @@ public class McpAsyncServer {
 			McpServerFeatures.AsyncResourceSpecification removed = this.resources.remove(resourceUri);
 			if (removed != null) {
 				logger.debug("Removed resource handler: {}", resourceUri);
-				if (this.serverCapabilities.resources().listChanged()) {
+				if (this.serverCapabilities.getResources().getListChanged()) {
 					return notifyResourcesListChanged();
 				}
 				return Mono.empty();
@@ -434,8 +431,8 @@ public class McpAsyncServer {
 		return (exchange, params) -> {
 			var resourceList = this.resources.values()
 				.stream()
-				.map(McpServerFeatures.AsyncResourceSpecification::resource)
-				.toList();
+				.map(McpServerFeatures.AsyncResourceSpecification::getResource)
+				.collect(Collectors.toList());
 			return Mono.just(new McpSchema.ListResourcesResult(resourceList, null));
 		};
 	}
@@ -452,12 +449,12 @@ public class McpAsyncServer {
 			.stream()
 			.filter(uri -> uri.contains("{"))
 			.map(uri -> {
-				var resource = this.resources.get(uri).resource();
-				var template = new McpSchema.ResourceTemplate(resource.uri(), resource.name(), resource.description(),
-						resource.mimeType(), resource.annotations());
+				var resource = this.resources.get(uri).getResource();
+				var template = new McpSchema.ResourceTemplate(resource.getUri(), resource.getName(), resource.getDescription(),
+						resource.getMimeType(), resource.getAnnotations());
 				return template;
 			})
-			.toList();
+			.collect(Collectors.toList());
 
 		list.addAll(resourceTemplates);
 
@@ -469,17 +466,17 @@ public class McpAsyncServer {
 			McpSchema.ReadResourceRequest resourceRequest = objectMapper.convertValue(params,
 					new TypeReference<McpSchema.ReadResourceRequest>() {
 					});
-			var resourceUri = resourceRequest.uri();
+			var resourceUri = resourceRequest.getUri();
 
 			McpServerFeatures.AsyncResourceSpecification specification = this.resources.values()
 				.stream()
 				.filter(resourceSpecification -> this.uriTemplateManagerFactory
-					.create(resourceSpecification.resource().uri())
+					.create(resourceSpecification.getResource().getUri())
 					.matches(resourceUri))
 				.findFirst()
 				.orElseThrow(() -> new McpError("Resource not found: " + resourceUri));
 
-			return specification.readHandler().apply(exchange, resourceRequest);
+			return specification.getReadHandler().apply(exchange, resourceRequest);
 		};
 	}
 
@@ -496,24 +493,24 @@ public class McpAsyncServer {
 		if (promptSpecification == null) {
 			return Mono.error(new McpError("Prompt specification must not be null"));
 		}
-		if (this.serverCapabilities.prompts() == null) {
+		if (this.serverCapabilities.getPrompts() == null) {
 			return Mono.error(new McpError("Server must be configured with prompt capabilities"));
 		}
 
 		return Mono.defer(() -> {
 			McpServerFeatures.AsyncPromptSpecification specification = this.prompts
-				.putIfAbsent(promptSpecification.prompt().name(), promptSpecification);
+				.putIfAbsent(promptSpecification.getPrompt().getName(), promptSpecification);
 			if (specification != null) {
 				return Mono.error(
-						new McpError("Prompt with name '" + promptSpecification.prompt().name() + "' already exists"));
+						new McpError("Prompt with name '" + promptSpecification.getPrompt().getName() + "' already exists"));
 			}
 
-			logger.debug("Added prompt handler: {}", promptSpecification.prompt().name());
+			logger.debug("Added prompt handler: {}", promptSpecification.getPrompt().getName());
 
 			// Servers that declared the listChanged capability SHOULD send a
 			// notification,
 			// when the list of available prompts changes
-			if (this.serverCapabilities.prompts().listChanged()) {
+			if (this.serverCapabilities.getPrompts().getListChanged()) {
 				return notifyPromptsListChanged();
 			}
 			return Mono.empty();
@@ -529,7 +526,7 @@ public class McpAsyncServer {
 		if (promptName == null) {
 			return Mono.error(new McpError("Prompt name must not be null"));
 		}
-		if (this.serverCapabilities.prompts() == null) {
+		if (this.serverCapabilities.getPrompts() == null) {
 			return Mono.error(new McpError("Server must be configured with prompt capabilities"));
 		}
 
@@ -540,7 +537,7 @@ public class McpAsyncServer {
 				logger.debug("Removed prompt handler: {}", promptName);
 				// Servers that declared the listChanged capability SHOULD send a
 				// notification, when the list of available prompts changes
-				if (this.serverCapabilities.prompts().listChanged()) {
+				if (this.serverCapabilities.getPrompts().getListChanged()) {
 					return this.notifyPromptsListChanged();
 				}
 				return Mono.empty();
@@ -566,8 +563,8 @@ public class McpAsyncServer {
 
 			var promptList = this.prompts.values()
 				.stream()
-				.map(McpServerFeatures.AsyncPromptSpecification::prompt)
-				.toList();
+				.map(McpServerFeatures.AsyncPromptSpecification::getPrompt)
+				.collect(Collectors.toList());
 
 			return Mono.just(new McpSchema.ListPromptsResult(promptList, null));
 		};
@@ -580,12 +577,12 @@ public class McpAsyncServer {
 					});
 
 			// Implement prompt retrieval logic here
-			McpServerFeatures.AsyncPromptSpecification specification = this.prompts.get(promptRequest.name());
+			McpServerFeatures.AsyncPromptSpecification specification = this.prompts.get(promptRequest.getName());
 			if (specification == null) {
-				return Mono.error(new McpError("Prompt not found: " + promptRequest.name()));
+				return Mono.error(new McpError("Prompt not found: " + promptRequest.getName()));
 			}
 
-			return specification.promptHandler().apply(exchange, promptRequest);
+			return specification.getPromptHandler().apply(exchange, promptRequest);
 		};
 	}
 
@@ -611,7 +608,7 @@ public class McpAsyncServer {
 			return Mono.error(new McpError("Logging message must not be null"));
 		}
 
-		if (loggingMessageNotification.level().level() < minLoggingLevel.level()) {
+		if (loggingMessageNotification.getLevel().level() < minLoggingLevel.level()) {
 			return Mono.empty();
 		}
 
@@ -627,13 +624,13 @@ public class McpAsyncServer {
 						new TypeReference<SetLevelRequest>() {
 						});
 
-				exchange.setMinLoggingLevel(newMinLoggingLevel.level());
+				exchange.setMinLoggingLevel(newMinLoggingLevel.getLevel());
 
 				// FIXME: this field is deprecated and should be removed together
 				// with the broadcasting loggingNotification.
-				this.minLoggingLevel = newMinLoggingLevel.level();
+				this.minLoggingLevel = newMinLoggingLevel.getLevel();
 
-				return Mono.just(Map.of());
+				return Mono.just(Collections.emptyMap());
 			});
 		};
 	}
@@ -642,28 +639,29 @@ public class McpAsyncServer {
 		return (exchange, params) -> {
 			McpSchema.CompleteRequest request = parseCompletionParams(params);
 
-			if (request.ref() == null) {
+			if (request.getRef() == null) {
 				return Mono.error(new McpError("ref must not be null"));
 			}
 
-			if (request.ref().type() == null) {
+			if (request.getRef().getType() == null) {
 				return Mono.error(new McpError("type must not be null"));
 			}
 
-			String type = request.ref().type();
+			String type = request.getRef().getType();
 
-			String argumentName = request.argument().name();
+			String argumentName = request.getArgument().getName();
 
 			// check if the referenced resource exists
-			if (type.equals("ref/prompt") && request.ref() instanceof McpSchema.PromptReference promptReference) {
-				McpServerFeatures.AsyncPromptSpecification promptSpec = this.prompts.get(promptReference.name());
+			if (type.equals("ref/prompt") && request.getRef() instanceof McpSchema.PromptReference) {
+				McpSchema.PromptReference promptReference = (McpSchema.PromptReference) request.getRef();
+				McpServerFeatures.AsyncPromptSpecification promptSpec = this.prompts.get(promptReference.getName());
 				if (promptSpec == null) {
-					return Mono.error(new McpError("Prompt not found: " + promptReference.name()));
+					return Mono.error(new McpError("Prompt not found: " + promptReference.getName()));
 				}
-				if (!promptSpec.prompt()
-					.arguments()
+				if (!promptSpec.getPrompt()
+					.getArguments()
 					.stream()
-					.filter(arg -> arg.name().equals(argumentName))
+					.filter(arg -> arg.getName().equals(argumentName))
 					.findFirst()
 					.isPresent()) {
 
@@ -671,12 +669,13 @@ public class McpAsyncServer {
 				}
 			}
 
-			if (type.equals("ref/resource") && request.ref() instanceof McpSchema.ResourceReference resourceReference) {
-				McpServerFeatures.AsyncResourceSpecification resourceSpec = this.resources.get(resourceReference.uri());
+			if (type.equals("ref/resource") && request.getRef() instanceof McpSchema.ResourceReference) {
+				McpSchema.ResourceReference resourceReference = (McpSchema.ResourceReference) request.getRef();
+				McpServerFeatures.AsyncResourceSpecification resourceSpec = this.resources.get(resourceReference.getUri());
 				if (resourceSpec == null) {
-					return Mono.error(new McpError("Resource not found: " + resourceReference.uri()));
+					return Mono.error(new McpError("Resource not found: " + resourceReference.getUri()));
 				}
-				if (!uriTemplateManagerFactory.create(resourceSpec.resource().uri())
+				if (!uriTemplateManagerFactory.create(resourceSpec.getResource().getUri())
 					.getVariableNames()
 					.contains(argumentName)) {
 					return Mono.error(new McpError("Argument not found: " + argumentName));
@@ -684,10 +683,10 @@ public class McpAsyncServer {
 
 			}
 
-			McpServerFeatures.AsyncCompletionSpecification specification = this.completions.get(request.ref());
+			McpServerFeatures.AsyncCompletionSpecification specification = this.completions.get(request.getRef());
 
 			if (specification == null) {
-				return Mono.error(new McpError("AsyncCompletionSpecification not found: " + request.ref()));
+				return Mono.error(new McpError("AsyncCompletionSpecification not found: " + request.getRef()));
 			}
 
 			return specification.completionHandler().apply(exchange, request);
@@ -713,13 +712,16 @@ public class McpAsyncServer {
 		Map<String, Object> refMap = (Map<String, Object>) params.get("ref");
 		Map<String, Object> argMap = (Map<String, Object>) params.get("argument");
 
+		McpSchema.PromptOrResourceReference ref;
 		String refType = (String) refMap.get("type");
 
-		McpSchema.CompleteReference ref = switch (refType) {
-			case "ref/prompt" -> new McpSchema.PromptReference(refType, (String) refMap.get("name"));
-			case "ref/resource" -> new McpSchema.ResourceReference(refType, (String) refMap.get("uri"));
-			default -> throw new IllegalArgumentException("Invalid ref type: " + refType);
-		};
+		if ("ref/prompt".equals(refType)) {
+			ref = new McpSchema.PromptReference(refType, (String) refMap.get("name"));
+		} else if ("ref/resource".equals(refType)) {
+			ref = new McpSchema.ResourceReference(refType, (String) refMap.get("uri"));
+		} else {
+			throw new IllegalArgumentException("Invalid ref type: " + refType);
+		}
 
 		String argName = (String) argMap.get("name");
 		String argValue = (String) argMap.get("value");
